<resources>
    <string name="titulo_encuesta">ENCUESTA NACIONAL AGROPECUARIA 2017</string>
    <string name="titulo_curso">SEGUNDO CURSO DE CAPACITACION – REGION COSTA SELVA Y ESTRATO ESPECIAL</string>
    <string name="app_name">ENA Cuestionario 2017</string>
    <string name="control01_nombre">PRIMER CONTROL DE LECTURA</string>
    <string name="control02_nombre">SEGUNDO CONTROL DE LECTURA</string>
    <string name="control03_nombre">TERCER CONTROL DE LECTURA</string>
    <string name="control04_nombre">CUARTO CONTROL DE LECTURA</string>
    <string name="control05_nombre">QUINTO CONTROL DE LECTURA</string>
    <string name="control06_nombre">SEXTO CONTROL DE LECTURA</string>
    <string name="control07_nombre">SEPTIMO CONTROL DE LECTURA</string>
    <string name="eval01_nombre">PRIMERA EVALUACION</string>
    <string name="eval02_nombre">SEGUNDA EVALUACION</string>
    <string name="eval03_nombre">TERCERA EVALUACION</string>
    <string name="eval04_nombre">CUARTA EVALUACION</string>
    <string name="eval05_nombre">QUINTA EVALUACION</string>
    <string name="eval06_nombre">SEXTA EVALUACION</string>
    <string name="eval07_nombre">SEPTIMA EVALUACION</string>
    <string name="eval08_nombre">EVALUACION FINAL</string>
    <string name="control01_p01">1.¿Cuál de las siguientes alternativas corresponde a la definición de objetivo general de la encuesta?  (2 puntos)</string>
    <string name="control01_p01_op01">a)	Disponer de información estadística que permita caracterizar a las pequeñas, medianas y grandes unidades agropecuarias del país.</string>
    <string name="control01_p01_op02">b)	Obtener el porcentaje de productores/as agropecuarios/as que aplican riego tecnificado</string>
    <string name="control01_p01_op03">c)	Estimar la superficie agrícola con riego tecnificado</string>
    <string name="control01_p01_op04">d)	Obtener una línea de base para medir el incremento porcentual de la utilidad bruta por ventas de los pequeños/as productores/as.</string>
    <string name="control01_p01_op05">e)	N.A.</string>
    <string name="control01_p02">2.	¿Cuál de las siguientes alternativas no corresponde al resultado de la encuesta?(2 puntos)</string>
    <string name="control01_p02_op01">a) No se inició la entrevista</string>
    <string name="control01_p02_op02">b) Fuera del distrito</string>
    <string name="control01_p02_op03">c) Sin actividad</string>
    <string name="control01_p02_op04">d) Solo fábrica</string>
    <string name="control01_p02_op05">e) No ubicada</string>
    <string name="control01_p03">3. Relaciona las siguientes definiciones:</string>
    <string name="control01_p03_sub01">a) “Listado de unidades agropecuarias seleccionadas en el conglomerado No Panel”</string>
    <string name="control01_p03_sub02">b) “Listado de unidades agropecuarias del conglomerado seleccionado”</string>
    <string name="control01_p03_sub03">c) Es el documento que contiene las imágenes representativas de las preguntas de los principales capítulos desde el 100 hasta el 1200.</string>
    <string name="control01_p03_sub04">d) Es el documento que contiene los casos representativos de los principales capítulos desde el 100 hasta el 1200.</string>
    <string name="control01_p03_op01">Doc.08.07 Anexo A</string>
    <string name="control01_p03_op02">Doc.03.03</string>
    <string name="control01_p03_op03">Doc.08.25 Anexo B</string>
    <string name="control01_p03_op04">Doc.03.03.01</string>
    <string name="control01_p04">4. Seleccione VERDADERO ó FALSO según corresponda:(12 puntos)</string>
    <string name="control01_p04_sub01">El coordinador/a departamental depende del supervisor/a nacional, es responsable de organizar, dirigir, supervisar, evaluar y coordinar la ejecución de la encuesta en lo que respecta al trabajo de campo y la consistencia básica de la información.</string>
    <string name="control01_p04_sub02">El informante es la persona que proporciona los datos requeridos para la encuesta.</string>
    <string name="control01_p04_sub03">Antes de iniciar la operación de campo el encuestador/a debe reconocer, ubicar e identificar los límites del conglomerado asignado con ayuda de los documentos cartográficos y listados.</string>
    <string name="control01_p04_sub04">No se consideran unidades agropecuarias cuando una de las parcelas fue dada en concesión para la extracción de productos naturales, ya sean vegetales (castaña, uña de gato) o animales de monte.</string>
    <string name="control01_p04_sub05">La unidad agropecuaria está fusionada cuando una de sus parcelas es absorbida por otra unidad agropecuaria seleccionada.</string>
    <string name="control01_p04_sub06">Encuestador, en caso de ausencia del productor/a agropecuario/a entregue el Doc.08.12 “citación a los productores/as agropecuarios/as ausentes”, indicando fecha y hora en que retornará a la unidad agropecuaria.</string>
    <string name="control01_p04_sub07">El productor/a agropecuario/a generalmente debe ser entrevistado en la unidad agropecuaria.</string>
    <string name="control01_p04_sub08">Para cargar la tablet se debe conectar mediante el cable OTG, al cargador.</string>
    <string name="control01_p04_sub09">Durante la operación de campo el encuestador/a debe reconocer, ubicar e identificar los límites del conglomerado asignado con ayuda de los documentos cartográficos y listados.</string>
    <string name="control01_p04_sub10">Dentro del menú de configuración de la tablet, los ajustes más utilizados son: Aplicaciones, ubicación y fecha y hora.</string>
    <string name="control01_p04_sub11">La unidad de observación del estudio de la Encuesta Nacional Agropecuaria es el productor/a agropecuario/a.</string>
    <string name="control01_p04_sub12">La Encuesta Nacional Agropecuaria dirigida a empresas y grandes productores/as, comprende las unidades agropecuarias del país que son empresas agrícolas, empresas pecuarias y excepcionalmente las personas naturales con 50,0 hectáreas a más.</string>
    <string name="control02_p01">1.	Anote, dentro del paréntesis verdadero “V” o falso “F” según corresponda:(13 Puntos)</string>
    <string name="control02_p01_sub01"> Dedicarse a la actividad agropecuaria de manera independiente, es cuando una persona se dedica a las actividades agrícolas y/o pecuarias tomando la responsabilidad total de la inversión y asumiendo las consecuencias de sus decisiones.</string>
    <string name="control02_p01_sub02"> No realizó actividad, es aquella unidad agropecuaria que por un periodo mayor a los últimos 12 meses no está siendo trabajada por un productor/a agropecuario/a pero en cualquier momento puede ser trabajada.</string>
    <string name="control02_p01_sub03"> Unidad agropecuaria sin tierra, cuando la unidad agropecuaria posee tierras no agrícolas, caso que se da con los productores/as pecuarios/as.</string>
    <string name="control02_p01_sub04"> Cedidas por terceros sin contrapartida, corresponde al caso en que el productor/a utiliza terrenos de un tercero, sin mediar algún tipo de contraprestación.</string>
    <string name="control02_p01_sub05"> Se llama cultivo transitorio, a los cultivos cuyo ciclo vegetativo o de crecimiento (para obtener una cosecha) es menor de un año y al terminar de cosechar se destruyen totalmente las plantas.</string>
    <string name="control02_p01_sub06"> El limón ácido, plátano y lúcumo son ejemplos de cultivos permanentes de cosecha estacional.</string>
    <string name="control02_p01_sub07"> Si el productor/a manifiesta que la fuente principal de agua que empleó en sus cultivos procede de un puquial u ojo de agua, seleccione la alternativa Pozo/agua subterránea.</string>
    <string name="control02_p01_sub08"> El sistema de riego por aspersión artesanal es considerado como riego por gravedad.</string>
    <string name="control02_p01_sub09"> El riego por multicompuertas también conocido como riego por caudal intermitente, riego por impulsos o pulsos.</string>
    <string name="control02_p01_sub10"> La producción perdida o afectada, es la parte de la producción que se pierde en post cosecha, por el manipuleo del producto, sobremaduración, etc.</string>
    <string name="control02_p01_sub11"> El comerciante mayorista es quien vende directamente al consumidor final.</string>
    <string name="control02_p01_sub12"> Suelo pobre/infértil, es cuando el suelo está muy desgastado y pierde su capacidad de producción, se le conoce como suelo pobre, cansado o infértil.</string>
    <string name="control02_p01_sub13"> El riego por aspersión es el sistema que posibilita aplicar el agua en forma de lluvia fina y suave</string>
    <string name="control02_p02">2.	Relaciona las siguientes definiciones:(7 Puntos)</string>
    <string name="control02_p02_sub01">A) Es un sistema de tuberías que consiste en distribuir el agua de forma continua a través de poros, lo que da lugar a la formación de una franja continua de humedad, que las hace muy indicadas para el riego de cultivos en línea.</string>
    <string name="control02_p02_sub02">B) Cultivos cosechados por lo general en un periodo determinado del año, en estos casos el periodo de cosecha suele durar más de un mes.</string>
    <string name="control02_p02_sub03">C) Consiste en el uso de tubos de plástico con forma curvada adaptada al tamaño del surco, por los cuales se vierte el agua sin necesidad de abrir zanjas.</string>
    <string name="control02_p02_sub04">D) Periodo de tiempo a lo largo de un año, que comprende desde la siembra del cultivo (pasando por el crecimiento, producción de flores y frutos) hasta la cosecha o recolección del mismo.</string>
    <string name="control02_p02_sub05">E) Consiste en la determinación de la siembra o plantación de los cultivos en la unidad agropecuaria, en función a ciertos criterios como; características del suelo (profundidad y tipo), clima de la zona, disponibilidad de agua e inclinación de la parcela.</string>
    <string name="control02_p02_sub06">F) Cultivo que es cosechado durante todo el año con una frecuencia constante, es decir semanalmente, quincenalmente, mensualmente, etc.</string>
    <string name="control02_p02_sub07">G) Es la parte de la producción que se destina a la transformación primaria, ejemplo: chuño, vino, mermelada.</string>
    <string name="control02_p02_op01">Orientación de siembras</string>
    <string name="control02_p02_op02">Cultivo permanente de cosecha continua</string>
    <string name="control02_p02_op03">Periodo vegetativo</string>
    <string name="control02_p02_op04">Derivados</string>
    <string name="control02_p02_op05">Sifones</string>
    <string name="control02_p02_op06">Cultivo permanente de cosecha estacional</string>
    <string name="control02_p02_op07">Exudación</string>
    <string name="control03_p01">1. Seleccionar (V) verdadero o (F) falso en las preguntas siguientes: (15 puntos)</string>
    <string name="control03_p01_sub01">1) Las buenas prácticas agrícolas condicionadas son aquellas actividades que se aplican a la producción, procesamiento y transporte de los alimentos agrícolas destinados a asegurar la inocuidad del producto de las cosechas, el cuidado de la salud humana, la protección del medio ambiente y mejorar las condiciones de trabajo de las personas que laboran en la actividad agrícola. No implican un previo cumplimiento de uso de determinados insumos agrícolas.</string>
    <string name="control03_p01_sub02">2) Subproductos agrícolas son los residuos de los cultivos que se generan durante la producción agrícola como chala de maíz, paja de trigo, etc.</string>
    <string name="control03_p01_sub03">3) Gasto en fertilizantes, es el gasto efectuado por la compra de productos orgánicos utilizados para la fertilización del suelo.</string>
    <string name="control03_p01_sub04">4) El vivero es un establecimiento dedicado a la comercialización de semillas y otros productos agrarios.</string>
</resources>